# internal/handler/v1_create_account_handler.go
@@ -8,9 +8,19 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
+// CreateAccountV1Handler godoc
+// @Summary Добавление банковского счета
+// @Description Добавление банковского счета
+// @Tags Payment
+// @Accept       json
+// @Produce      json
+// @Param        body  body model.CreateAccountV1Request true "CreateAccountV1Request"
+// @Success      201   {object}  model.CreateAccountV1Response "Registration successfully"
+// @Failure      400   {object}  model.ErrorResponse "Invalid request body"
+// @Failure      500   {object}  model.ErrorResponse "Internal server error"
+// @Router       /v1/accounts [post].
 func (h *Handler) CreateAccountV1Handler(w http.ResponseWriter, r *http.Request) {
 	var createAccountRequest model.CreateAccountV1Request
-
 	if err := json.NewDecoder(r.Body).Decode(&createAccountRequest); err != nil {
 		log.Error().Err(err).Msgf("failed to decode refresh token data in createAccountRequest, error: %v", err)
 		h.HandleError(w, http.StatusBadRequest, "invalid data")
@@ -18,14 +28,13 @@ func (h *Handler) CreateAccountV1Handler(w http.ResponseWriter, r *http.Request)
 	}
 
 	userID := r.Header.Get(HeaderUserID)
-	if userID == "" {
-		log.Error().Msg("CreateAccountV1Handler missing userID")
-		h.HandleError(w, http.StatusUnauthorized, "Unauthorized")
+	if err := createAccountRequest.Validate(userID); err != nil {
+		log.Error().Msgf("failed to validate createAccountRequest: %v", err)
+		h.HandleError(w, http.StatusBadRequest, "invalid data")
 		return
 	}
 
-	createAccountRequest.UserID = userID
-	_, err := h.puc.CreateAccountV1UseCase(r.Context(), createAccountRequest)
+	_, err := h.puc.CreateAccountV1UseCase(r.Context(), createAccountRequest, userID)
 	if err != nil {
 		log.Error().Msgf("failed to sign in verify, code: %d, message: %s, error: %v", err.GetCode(), err.GetMessage(), err.GetDescription())
 		h.HandleError(w, int(err.GetCode()), err.GetMessage())
